--- a/实验报告.md
+++ b/实验报告.md
@@ -1,4 +1,4 @@
-#实验目的
+###实验目的
 
 1.掌握字符串String及其方法的使用
 
@@ -6,7 +6,7 @@
 
 3.掌握异常处理结构
 
-#实验内容
+###实验内容
 
 在某课上,学生要提交实验结果，该结果存储在一个文本文件A中。
 
@@ -44,7 +44,7 @@
 
 ......
 
-#实验要求
+###实验要求
 
 1.设计学生类（可利用之前的）；
 
@@ -52,7 +52,7 @@
 
 3.设计程序完成上述的业务逻辑处理，并且把“古诗处理后的输出”结果存储到学生基本信息所在的文本文件A中。
 
-#实验过程
+###实验过程
 
 1.首先设计学生类创建学生基本信息；
 
@@ -64,7 +64,7 @@
 
 5.将所处理的作业信息s化为s.toString()字符串形式用a1.write()写入文本文件A中;
 
-#核心代码
+###核心代码
 
 ```
   
@@ -186,6 +186,12 @@ public class test {
 }
 ```
 
-#实验结果
+###实验结果
 
-![1]
+![1]()
+![2]()
+![3]()
+
+###实验感想
+
+本次实验，学习到如何创建文本文件，采用文件输出流，字符输入流的方式将内容写入和取读，通过这次实验，更加熟悉对for循环的运用， 字符串的了解。利用循环简洁代码，让代码的利用率更高。
